# LM

./: .gitignore  CODE_REVIEW_RESPONSE.md  ENTROPY_SYSTEM.md  FUEL_BUDGET_RECOMMENDATIONS.md  GENERATION_IMPROVEMENTS.md  IMPLEMENTATION_NOTES.md  PERFORMANCE_METRICS.md  README.md  RNG_SEEDING_FIX.md  SIZE_DISTRIBUTION_FIX.md  aggressive_fuel_test.py  analyze_data_quality.py  diagnose_early_stopping.py  export_onnx.py  lambda_gen.py  lambda_infer.py  lambda_train.py  optimized_throughput_test.py  parallel_gen.py  performance_metrics.py  run_performance_test.sh  runtime_aware_throughput_test.py  test_nf_reduction.py  throughput_test.py
docs/: DATA_QUALITY_ISSUE_RESOLUTION.md  DIVERSITY_AT_SCALE.md  FUEL_BUDGET_INVESTIGATION.md  INVESTIGATION_SUMMARY.md  NF_REDUCTION_ANALYSIS.md  PATHOLOGICAL_FILTER.md  RUNTIME_AWARE_SUMMARY.md  STRICT_PATHOLOGICAL_FILTER.md  TERM_EXPLOSION_ISSUE.md
docs/issues/: EXAMPLE_LEVEL_FILTERING.md  NON_NORMALIZING_TERMS_ISSUE.md  PREMATURE_NF_VALIDATION.md
docs/reference/: DATA_QUALITY_ANALYSIS.md  GENERATION_PIPELINE_STATUS.md  TRAINING_PIPELINE_FIXES.md
lambda_gen_rs/: .gitignore  BUILD.md  Cargo.toml  INFERENCE.md  TRACE_COMPLETION_FIX.md  VALIDATION.md
lambda_gen_rs/src/: classical.rs  generator.rs  lib.rs  main.rs  neural.rs  parallel.rs  reduction.rs  render.rs  schema.rs  term.rs  tokenizer.rs
tests/: check_diversity.py  deep_diagnose.py  diagnose_training_data.py  quick_throughput_test.py  test_fuel_metrics.py  verify_zero_pathological.sh
