[package]
name = "lambda_gen_rs"
version = "1.0.0"
edition = "2021"
authors = ["Lambda Calculus Generator"]

[[bin]]
name = "lambda-gen"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parallelism
rayon = "1.10"
crossbeam = "0.8"
num_cpus = "1.16"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

# UUID generation
uuid = { version = "1.10", features = ["v4"] }

# Hashing
seahash = "4.1"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Time measurement
instant = "0.1"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
