[package]
name = "lambda_gen_rs"
version = "1.0.0"
edition = "2021"
authors = ["Lambda Calculus Generator"]

[[bin]]
name = "lambda-gen"
path = "src/main.rs"

[dependencies]
# Using only std library - no external dependencies needed!

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
