[package]
name = "lambda_gen_rs"
version = "1.0.0"
edition = "2021"
authors = ["Lambda Calculus Generator"]

[[bin]]
name = "lambda-gen"
path = "src/main.rs"

# Disabled: requires external dependencies (rayon, tract_onnx, etc.)
# [[bin]]
# name = "lambda-infer"
# path = "src/bin/infer.rs"

[dependencies]
# NOTE: External dependencies commented out due to network restrictions
# Uncomment when building in environment with crates.io access
#
# tract-onnx = "0.21"      # ONNX runtime for neural inference
# ndarray = "0.15"          # Fast argmax and tensor operations
# rayon = "1.8"             # Parallel iteration
# clap = { version = "4.4", features = ["derive"] }  # CLI parsing
# serde = { version = "1.0", features = ["derive"] }  # JSON serialization
# serde_json = "1.0"        # JSON output

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
